update ResponseMediator; update chat sample
